k8s/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go_web_app
  labels:
    app: go_web_app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go_web_app
  template:
    metadata:
      labels:
        app: go_web_app
    spec:
      containers:
      - name: go_container
        image: akshayarsude1997/new_go_app_image
        ports:
        - containerPort: 8080
