k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: go_web_app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
